Fix the raids display on mobile

--- a/src/components/raids/raids.module.css
+++ b/src/components/raids/raids.module.css
@@ -45,10 +45,15 @@
     flex-direction: column;
     align-items: center;
     margin: 0;
+    margin-bottom: 24px;
     padding: 0;
   }
   .LocationTitle {
     margin-top: -16px;
+  }
+  .DateTitle {
+    margin-bottom: -1rem;
+    color: #66add9;
   }
 }
 
